# gpui-component

./: .gitignore  .theme-schema.json  Cargo.toml  DEVELOPMENT  DEVELOPMENT.md  LICENSE-APACHE  README.md  flake.nix  refactor.sh  theme-schema.json
crates/story/: Cargo.toml
crates/story/examples/: accordion.rs  alert.rs  asset_go_board.rs  button.rs  code-editor.rs  description_list.rs  dock.rs  form.rs  hello_world.rs  html.html  html.rs  input.rs  list.rs  markdown.md  markdown.rs  modal.rs  popover.rs  popup.rs  scrollable.rs  sidebar.rs  switch.rs  table.rs  tabs.rs  text.rs  tiles.rs  toggle.rs  tooltip.rs  webview.rs
crates/story/examples/fixtures/: test.c  test.go  test.html  test.js  test.json  test.md  test.nv  test.py  test.rb  test.rs  test.sql  test.ts  test.zig
crates/story/src/: accordion_story.rs  alert_story.rs  assets.rs  avatar_story.rs  badge_story.rs  button_story.rs  calendar_story.rs  chart_story.rs  checkbox_story.rs  clipboard_story.rs  color_picker_story.rs  date_picker_story.rs  description_list_story.rs  drawer_story.rs  dropdown_story.rs  form_story.rs  go_board_story.rs  group_box_story.rs  icon_story.rs  image_story.rs  indicator_story.rs  input_story.rs  kbd_story.rs  label_story.rs  lib.rs  list_story.rs  main.rs  menu_story.rs  modal_story.rs  notification_story.rs  number_input_story.rs  otp_input_story.rs  popover_story.rs  popup_story.rs  progress_story.rs  radio_story.rs  resizable_story.rs  scrollable_story.rs  sidebar_story.rs  skeleton_story.rs  (+14 more)
crates/story/src/fixtures/: counters.json  countries.json  daily-devices.json  mod.rs  monthly-devices.json  pie.json
crates/story/src/go_board_examples/: README.md  demos.rs  documentation.rs  mod.rs  simple_demos.rs  simple_docs.rs
crates/story/src/themes/: adventure.json  ayu.json  catppuccin.json  macos-classic.json  solarized.json  tokyonight.json
crates/ui/: Cargo.toml
crates/ui/locales/: ui.yml
crates/ui/src/: accordion.rs  alert.rs  badge.rs  breadcrumb.rs  button.rs  checkbox.rs  clipboard.rs  color_picker.rs  colors.rs  context_menu.rs  description_list.rs  divider.rs  drawer.rs  dropdown.rs  focusable.rs  form.rs  global_state.rs  group_box.rs  history.rs  icon.rs  index_path.rs  indicator.rs  inspector.rs  kbd.rs  label.rs  lib.rs  link.rs  modal.rs  notification.rs  number_input.rs  popover.rs  popup_menu.rs  prelude.rs  progress.rs  radio.rs  root.rs  skeleton.rs  slider.rs  styled.rs  svg_img.rs  (+9 more)
crates/ui/src/avatar/: avatar.rs  avatar_group.rs  mod.rs
crates/ui/src/button/: button.rs  button_group.rs  dropdown_button.rs  mod.rs  toggle.rs
crates/ui/src/chart/: area_chart.rs  bar_chart.rs  line_chart.rs  mod.rs  pie_chart.rs
crates/ui/src/dock/: dock.rs  invalid_panel.rs  mod.rs  panel.rs  stack_panel.rs  state.rs  tab_panel.rs  tiles.rs
crates/ui/src/go_board/: REFACTORING_SUMMARY.md  USER_GUIDE.md  board.rs  bounded_go_board.rs  coordinates.rs  core.rs  differential_renderer.rs  efficient_update_tests.rs  error.rs  error_validation_tests.rs  examples.rs  examples_new_api.rs  ghost_stone.rs  go_board.rs  grid.rs  grid_tests.rs  heat_overlay.rs  integration_tests.rs  interactions.rs  keyboard_navigation.rs  line_overlay.rs  markers.rs  memory_integration_tests.rs  memory_manager.rs  migration.md  mod.rs  paint_overlay.rs  position_utils.rs  render.rs  selection.rs  state.rs  stones.rs  tests.rs  texture_integration_tests.rs  texture_loader.rs  theme.rs  theme_adapter.rs  types.rs  view.rs
crates/ui/src/highlighter/: highlight.rs  highlighter.rs  languages.rs  mod.rs  registry.rs
crates/ui/src/input/: blink_cursor.rs  change.rs  clear_button.rs  code_highlighter.rs  cursor.rs  element.rs  hover_popover.rs  input.rs  marker.rs  mask_pattern.rs  mod.rs  mode.rs  number_input.rs  otp_input.rs  rope_ext.rs  state.rs  text_input.rs  text_wrapper.rs
crates/ui/src/list/: cache.rs  delegate.rs  list.rs  list_item.rs  loading.rs  mod.rs  separator_item.rs
crates/ui/src/menu/: context_menu.rs  menu_item.rs  mod.rs  popup_menu.rs
crates/ui/src/plot/: axis.rs  grid.rs  label.rs  mod.rs  scale.rs  shape.rs  tooltip.rs
crates/ui/src/resizable/: mod.rs  panel.rs  resize_handle.rs
crates/ui/src/scroll/: scrollable.rs  scrollable_mask.rs  scrollbar.rs
crates/ui/src/sidebar/: footer.rs  group.rs  header.rs  menu.rs  mod.rs
crates/ui/src/tab/: tab.rs  tab_bar.rs
crates/ui/src/table/: column.rs  delegate.rs  loading.rs  mod.rs
crates/ui/src/text/: element.rs  html.rs  inline.rs  markdown.rs  mod.rs  node.rs  text_view.rs  utils.rs
crates/ui/src/theme/: color.rs  mod.rs  registry.rs  schema.rs  theme_color.rs
crates/ui/src/time/: calendar.rs  date_picker.rs
crates/ui/tests/fixtures/: layout.json
crates/webview/: Cargo.toml  README.md
crates/webview/examples/wef-example/: Cargo.toml  build.rs
crates/webview/locales/: webview.yml
crates/webview/src/: browser_handler.rs  context_menu.rs  element.rs  events.rs  frame_view.rs  lib.rs  utils.rs  webview.rs
crates/webview/tests/: index.html  input.html  jsbridge.html  jsdialog.html  upload.html
crates/wef/: Cargo.toml  README.md  build.rs
crates/wef/cpp/: app.h  app_callbacks.h  app_render_process.h  browser_callbacks.h  client.cpp  client.h  cursor.cpp  dirty_rect.cpp  external_pump.cpp  external_pump.h  external_pump_linux.cpp  external_pump_mac.mm  external_pump_win.cpp  file_dialog.cpp  frame.cpp  frame.h  js_dialog.cpp  load_library.cpp  query.cpp  sandbox_context.cpp  shutdown_helper.h  shutdown_helper_linux.cpp  shutdown_helper_mac.mm  shutdown_helper_win.cpp  utils.h  wef.cpp  wef.h
crates/wef/examples/wef-winit/: Cargo.toml  README.md  build.rs
crates/wef/src/: app_handler.rs  browser.rs  browser_handler.rs  builder.rs  context_menu.rs  cursor.rs  dirty_rects.rs  dpi.rs  error.rs  ffi.rs  file_dialog.rs  frame.rs  framework_loader.rs  geom.rs  input.rs  js_dialog.rs  lib.rs  query.rs  sandbox_context.rs  settings.rs  wef.rs
crates/wef/src/func_registry/: async_function_type.rs  builder.rs  dyn_wrapper.rs  error.rs  function_type.rs  inject.js  mod.rs  (+2 more)
crates/wef/tool/: Cargo.toml
(+94 files in other folders)
