[package]
edition = "2021"
name = "story"
publish = false
version = "0.1.0"

[dependencies]
anyhow.workspace = true
chrono = "0.4"
fake = { version = "2.10.0", features = ["dummy"] }
gpui.workspace = true
gpui-component = { workspace = true, features = ["webview"] }
rand = "0.8"
raw-window-handle = { version = "0.6", features = ["std"] }
regex = "1"
reqwest_client = { git = "https://github.com/zed-industries/zed.git" }
rust-embed = "8.5.0"
serde = "1"
serde_json = "1"
unindent = "0.2.3"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = { version = "0.18" }

[lints]
workspace = true
