[package]
description = "UI components for building fantastic desktop application by using GPUI."
edition = "2021"
homepage = "https://github.com/longbridge/gpui-component"
keywords = ["GPUI", "application", "desktop", "ui"]
license-file = "LICENSE-APACHE"
name = "gpui-component"
publish = true
version = "0.1.0"

[lib]
doctest = false

[features]
webview = ["dep:wry"]
inspector = []

[dependencies]
anyhow = "1"
gpui.workspace = true
image = "0.25.1"
itertools = "0.13.0"
once_cell = "1.19.0"
paste = "1"
regex = "1"
resvg = { version = "0.45.0", default-features = false, features = ["text"] }
rust-i18n = "3"
serde = "1.0.203"
serde_json = "1"
smallvec = "1.13.2"
smol = "1"
unicode-segmentation = "1.12.0"
usvg = { version = "0.45.0", default-features = false, features = ["text"] }
uuid = "1.10"
schemars = "0.8.22"
futures-util = "0.3.31"
wry = { version = "0.48.0", optional = true }
enum-iterator = "2.1.0"
tracing = "0.1.41"
# Markdown Parser
markdown = "1.0.0-alpha.22"
# HTML Parser
html5ever = "0.27"
markup5ever_rcdom = "0.3.0"
minify-html = "0.15.0"
# Calendar
chrono = "0.4.38"
# Code Editor
tree-sitter = "0.25.4"
tree-sitter-highlight = "0.25.4"
tree-sitter-json = "0.24.8"
tree-sitter-md = { git = "https://github.com/tree-sitter-grammars/tree-sitter-markdown", tag = "v0.5.0" }
tree-sitter-toml-ng = "0.7.0"
tree-sitter-yaml = "0.7.1"
tree-sitter-rust = "0.24.0"
tree-sitter-go = "0.23.4"
tree-sitter-c = "0.24.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-javascript = "0.23.1"
tree-sitter-zig = "1.1.2"
tree-sitter-java = "0.23.5"
tree-sitter-python = "0.23.6"
tree-sitter-ruby = "0.23.1"
tree-sitter-bash = "0.23.3"
tree-sitter-html = "0.23.2"
tree-sitter-css = "0.23.2"
tree-sitter-swift = "0.7.0"
tree-sitter-scala = "0.23.4"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-graphql = "0.1.0"
tree-sitter-proto = "0.2.0"
tree-sitter-make = "1.1.1"
tree-sitter-cmake = "0.7.1"
tree-sitter-typescript = "0.23.2"
tree-sitter-diff = "0.1.0"
tree-sitter-elixir = "0.3"
tree-sitter-embedded-template = "0.23.0"

[dev-dependencies]
indoc = "2"

[lints]
workspace = true
