[package]
description = "UI components for building fantastic desktop application by using GPUI."
edition = "2021"
homepage = "https://github.com/longbridge/gpui-component"
keywords = ["GPUI", "application", "desktop", "ui"]
license-file = "LICENSE-APACHE"
name = "gpui-component"
publish = true
version = "0.1.0"

[lib]
doctest = false

[features]
decimal = ["dep:rust_decimal"]
inspector = []
webview = ["dep:wry"]

[dependencies]
gpui.workspace = true
gpui-component-macros.workspace = true
rust-i18n.workspace = true
schemars.workspace = true
serde.workspace = true
serde_repr.workspace = true
serde_json.workspace = true
smallvec.workspace = true
smol.workspace = true
tracing.workspace = true
anyhow.workspace = true

enum-iterator = "2.1.0"
futures-util = "0.3.31"
image = "0.25.1"
itertools = "0.13.0"
once_cell = "1.19.0"
paste = "1"
regex = "1"
resvg = { version = "0.45.0", default-features = false, features = ["text"] }
unicode-segmentation = "1.12.0"
usvg = { version = "0.45.0", default-features = false, features = ["text"] }
uuid = "1.10"
wry = { version = "0.48.0", optional = true }
palette = "0.7.6"

# Chart
num-traits = "0.2"
rust_decimal = { version = "1.37.0", optional = true }

# Markdown Parser
markdown = "1.0.0-alpha.22"

# HTML Parser
html5ever = "0.27"
markup5ever_rcdom = "0.3.0"
minify-html = "0.15.0"

# Calendar
chrono = "0.4.38"

# Code Editor
indexset = "0.12.2"
tree-sitter = "0.25.4"
tree-sitter-bash = "0.23.3"
tree-sitter-c = "0.24.1"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-cmake = "0.7.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-css = "0.23.2"
tree-sitter-diff = "0.1.0"
tree-sitter-elixir = "0.3"
tree-sitter-embedded-template = "0.23.0"
tree-sitter-go = "0.23.4"
tree-sitter-graphql = "0.1.0"
tree-sitter-html = "0.23.2"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.23.1"
tree-sitter-jsdoc = "0.23.2"
tree-sitter-json = "0.24.8"
tree-sitter-make = "1.1.1"
tree-sitter-md = { git = "https://github.com/tree-sitter-grammars/tree-sitter-markdown", tag = "v0.5.0" }
tree-sitter-proto = "0.2.0"
tree-sitter-python = "0.23.6"
tree-sitter-ruby = "0.23.1"
tree-sitter-rust = "0.24.0"
tree-sitter-scala = "0.23.4"
tree-sitter-sequel = "0.3.8"
tree-sitter-swift = "0.7.0"
tree-sitter-toml-ng = "0.7.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-yaml = "0.7.1"
tree-sitter-zig = "1.1.2"

[dev-dependencies]
indoc = "2"

[lints]
workspace = true
