[package]
name = "wef"
version = "0.7.0"
edition = "2024"
authors = ["sunli <scott_s829@163.com>"]
license = "Apache-2.0"
homepage = "https://github.com/longbridge/gpui-component"
repository = "https://github.com/longbridge/gpui-component"
description = "Wef is a Rust library for embedding WebView functionality using Chromium Embedded Framework (CEF3) with offscreen rendering support."

[build-dependencies]
cc = { version = "1.2.18", features = ["parallel"] }
pkg-config = "0.3.32"
dirs = "6.0.0"

[dependencies]
image = { version = "0.25.6", default-features = false }
bitflags = "2.9.0"
thiserror = "2.0.12"
num_enum = "0.7.3"
mime = "0.3.17"
raw-window-handle = "0.6.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tuple_len = "3.0.0"
futures-util = "0.3.31"

[lints]
workspace = true
