[package]
name = "cargo-wef"
version = "0.6.0"
edition = "2024"
authors = ["sunli <scott_s829@163.com>"]
license = "Apache-2.0"
homepage = "https://github.com/longbridge/gpui-component"
repository = "https://github.com/longbridge/gpui-component"
description = "Cargo-wef is a command line tool for wef"
readme = "../README.md"

[dependencies]
clap = { version = "4.5.38", features = ["derive", "env"] }
plist = "1.7.1"
tempfile = "3.20.0"
anyhow = "1.0.98"
askama = { version = "0.14.0", features = ["code-in-doc"] }
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
fs_extra = "1.3.0"
tar = "0.4.44"
bzip2 = "0.5.2"
indicatif = "0.17.7"
dirs = "6.0.0"
cargo_metadata = "0.20.0"
serde_json = "1.0.140"
image = "0.25.6"
icns = "0.3.1"
