[package]
name = "wef-example"
version = "0.1.0"
edition = "2024"

[build-dependencies]
embed-manifest = "1.4.0"

[dependencies]
gpui-webview = { path = "../../" }
gpui.workspace = true
gpui-component.workspace = true
serde = { version = "1.0.219", features = ["derive"] }
futures-util = "0.3.31"
flume = "0.11.1"
