[package]
name = "wef-winit"
version = "0.1.0"
edition = "2024"

[build-dependencies]
embed-manifest = "1.4.0"

[dependencies]
wef.workspace = true

image = "0.25.6"
winit = "0.30.9"
softbuffer = "0.4.6"

[package.metadata.bundle]
name = "wef-winit"
identifier = "io.github.longbridge.wef.examples.winit"
category = "Utility"
icons = ["icons/icon32x32.png", "icons/icon128x128.png"]
